# models/activitymodel.go
@@ -22,7 +22,21 @@ type Activity struct {
 	DateInsert time.Time `json:"data_inserimento"`
 }
 
+// swagger:model Activity
+type Message struct {
+	// Id of Message value
+	// in: int64
+	Id int64 `json:"id"`
+	// Value of Message
+	// in: int
+	Value string `json:"messaggio"`
+	// Timestamp of insert
+	// in: time
+	DateInsert time.Time `json:"data_inserimento"`
+}
+
 type Activities []Activity
+type Messages []Message
 
 type IsActive bool
 
@@ -30,6 +44,12 @@ type ReqAddActivity struct {
 	// Value of the Activity
 	// in: int
 	Value int `json:"valore" validate:"required"`
+}
+
+type ReqAddMessage struct {
+	// Value of the Message
+	// in: string
+	Value string `json:"messaggio" validate:"required"`
 }
 
 // swagger:parameters addActivity
@@ -100,6 +120,23 @@ func GetLastActivitySqlx(db *sql.DB) *Activities {
 	}
 	return &activities
 }
+func GetMessagessSqlx(db *sql.DB) *Messages {
+	messages := Messages{}
+	rows, err := db.Query("SELECT id, messaggio, data_inserimento FROM messaggio where id = (select max(id) from attivita)")
+	if err != nil {
+		log.Fatal(err)
+	}
+	defer rows.Close()
+
+	for rows.Next() {
+		var p Message
+		if err := rows.Scan(&p.Id, &p.Value, &p.DateInsert); err != nil {
+			log.Fatal(err)
+		}
+		messages = append(messages, p)
+	}
+	return &messages
+}
 func GetLastHourSqlx(db *sql.DB) *Activities {
 	activities := Activities{}
 
@@ -131,6 +168,37 @@ func GetLastHourSqlx(db *sql.DB) *Activities {
 	}
 	return &activities
 }
+func GetMessagesSqlx(db *sql.DB) *Messages {
+	messages := Messages{}
+
+	tFine := time.Now()
+	dataFine := tFine.Format("2006-01-02 15:04:05")
+
+	tInizio := time.Now().Add(time.Duration(-1) * time.Hour)
+	dataInizio := tInizio.Format("2006-01-02 15:04:05")
+
+	sqlStatement := fmt.Sprintf("SELECT id,messaggio, data_inserimento FROM messaggio where data_inserimento  >= '%s' AND data_inserimento <= '%s'", dataInizio, dataFine)
+
+	rows, err := db.Query(sqlStatement)
+	if err != nil {
+		log.Fatal(err)
+	}
+	defer rows.Close()
+
+	for rows.Next() {
+		var p Message
+		if err := rows.Scan(&p.Id, &p.Value, &p.DateInsert); err != nil {
+			log.Fatal(err)
+		}
+		messages = append(messages, p)
+	}
+
+	if len(messages) == 0 {
+		elemento := GetMessagessSqlx(db)
+		messages = append(messages, *elemento...)
+	}
+	return &messages
+}
 
 // PostActivitySqlx insert Activity value
 func PostActivitySqlx(db *sql.DB, reqrain *ReqAddActivity) (*Activity, string) {
@@ -142,7 +210,7 @@ func PostActivitySqlx(db *sql.DB, reqrain *ReqAddActivity) (*Activity, string) {
 	lastInsertId := 0
 
 	//sqlStatement := fmt.Sprintf("insert into 'pioggia' ('valore','data_inserimento') values (%d,CURRENT_TIMESTAMP) RETURNING id", value)
-	sqlStatement := fmt.Sprintf("insert into attivita (data_inserimento) values (CURRENT_TIMESTAMP) RETURNING id")
+	sqlStatement := "insert into attivita (data_inserimento) values (CURRENT_TIMESTAMP) RETURNING id"
 
 	err := db.QueryRow(sqlStatement).Scan(&lastInsertId)
 
@@ -171,4 +239,45 @@ func PostActivitySqlx(db *sql.DB, reqrain *ReqAddActivity) (*Activity, string) {
 		return &activity, lang.Get("no_result")
 	}
 	return &activity, ""
+}
+
+// PostMessageSqlx insert Message value
+func PostMessageSqlx(db *sql.DB, reqmessage *ReqAddMessage) (*Message, string) {
+
+	value := reqmessage.Value
+
+	var message Message
+
+	lastInsertId := 0
+
+	//sqlStatement := fmt.Sprintf("insert into 'pioggia' ('valore','data_inserimento') values (%d,CURRENT_TIMESTAMP) RETURNING id", value)
+	sqlStatement := fmt.Sprintf("insert into messaggio (messaggio,data_inserimento) values (%s,CURRENT_TIMESTAMP) RETURNING id", value)
+
+	err := db.QueryRow(sqlStatement).Scan(&lastInsertId)
+
+	if err != nil {
+		return &message, ErrHandler(err)
+	}
+
+	sqlStatement1 := fmt.Sprintf("SELECT id,messaggio,data_inserimento FROM attivita where id = %d", lastInsertId)
+	rows, err := db.Query(sqlStatement1)
+
+	if err != nil {
+		log.Fatal(err)
+	}
+	defer rows.Close()
+
+	for rows.Next() {
+		var p Message
+		if err := rows.Scan(&p.Id, &p.Value, &p.DateInsert); err != nil {
+			// Check for a scan error.
+			// Query rows will be closed with defer.
+			log.Fatal(err)
+		}
+		message = p
+	}
+	if err != nil {
+		return &message, lang.Get("no_result")
+	}
+	return &message, ""
 }
